# Earnings-Call-Analyzer-RAG-Pipeline

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  DEPLOY.md  README.md  SECURITY.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.json
.claude/: README.md
.claude/agents/: README.md  rag-eval-reviewer.md  security-reviewer.md  tdd-engineer.md
.claude/commands/: README.md  new-command.md  simplify.md  smart-commit.md  write-readme.md
.claude/hooks/: README.md  auto-format.sh  block-secrets.sh  settings.json
.claude/mcp/: README.md  filesystem.md  github.md  jam.md  playwright.md  postgres.md  shadcn.md
.claude/skills/: README.md  brainstorming.md  chunking-strategies.md  dispatching-parallel-agents.md  earnings-transcript-parsing.md  frontend-design.md  interview-talking-points.md  playwright-browser-automation.md  postgres-pgvector-patterns.md  voyage-embeddings-reference.md
docker/initdb/: 01_extensions.sql  02_readonly_role.sql
scripts/: migrate_to_neon.py
src/: config.py  guardrails.py
src/api/: server.py
src/chunk/: __main__.py  cli.py  contextual_prefix.py  exec_lookup.py  merge_split.py  pipeline.py  speaker_aware_chunker.py
src/embed/: __main__.py  cli.py  pipeline.py  voyage_rest_client.py
src/enrich/: __main__.py  claude_extractor.py  cli.py  db_writer.py  pipeline.py  prompts.py  response_parser.py
src/eval/: __main__.py  cases.py  cli.py  experiments.py  runner.py  scorers.py
src/index/: schema.py
src/ingest/: __main__.py  audit.py  cli.py  hf_source.py  parser.py  transcript_loaders.py
src/retrieve/: __main__.py  bm25.py  cli.py  dense.py  filters.py  hybrid.py  rerank.py  rrf.py
src/synthesize/: __main__.py  citations.py  cli.py  opus_synthesizer.py  pipeline.py  prompts.py
tests/: test_guardrails.py
tests/chunk/: test_contextual_prefix.py  test_merge_split.py  test_speaker_aware_chunker.py
tests/embed/: test_voyage_rest_client.py
tests/enrich/: test_claude_extractor.py  test_prompts.py  test_response_parser.py
tests/ingest/: test_hf_source.py  test_parser.py  test_transcript_loaders.py
tests/retrieve/: test_filters.py  test_rrf.py
tests/synthesize/: test_citations.py  test_prompts.py
ui/: package-lock.json  package.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/compare/: page.tsx
ui/src/app/how-i-made-this/: page.tsx
ui/src/components/: answer-view.tsx  ask-form.tsx  citation-chip.tsx  filter-bar.tsx  pipeline-diagram.tsx  pipeline-trace.tsx  sample-chips.tsx  site-header.tsx  theme-toggle.tsx
ui/src/components/ui/: badge.tsx  button.tsx  card.tsx  hover-card.tsx  input.tsx  separator.tsx  skeleton.tsx  tabs.tsx  toggle-group.tsx
ui/src/lib/: api.ts
