[project]
name = "earnings-rag"
version = "0.1.0"
description = "Earnings Call Analyzer: hybrid-retrieval RAG over Mag 7 quarterly earnings transcripts (Q2 2024 -> Q1 2026)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Zay", email = "isaiah.e.malone@gmail.com" }]
license = { text = "MIT" }

dependencies = [
    # Anthropic (Claude) for enrichment, router, synthesis
    "anthropic>=0.40.0",
    # Voyage AI for embeddings (called via REST in src/embed/voyage_rest_client.py;
    # we don't import the voyageai SDK because it fails to import on Python 3.14
    # due to a pydantic-v1 + min_items issue in its multimodal_embeddings module).
    # Cohere for reranking
    "cohere>=5.11.0",
    # HuggingFace datasets for the primary transcript source (jlh-ibm/earnings_call)
    "datasets>=3.0.0",
    # Article scraping fallback (Motley Fool transcripts)
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    # Postgres + pgvector
    "psycopg[binary,pool]>=3.2.0",
    "pgvector>=0.3.0",
    # Tracing and evals
    "braintrust>=0.0.190",
    # Config / env loading
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    # Token counting for guardrails
    "tiktoken>=0.8.0",
    # Retries
    "tenacity>=9.0.0",
    # CLI ergonomics
    "typer>=0.15.0",
    "rich>=13.9.0",
    # HTTP API for the Next.js UI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "ipython>=8.30.0",
    "playwright>=1.49.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line-too-long (ruff formatter handles it)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["cohere.*", "voyageai.*", "braintrust.*", "pgvector.*", "datasets.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
    "integration: tests that hit external services (skipped by default in CI without keys)",
    "slow: tests that take more than a second",
]
